--- a/gb/20/1/15/n11793980.md
+++ b/gb/20/1/15/n11793980.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zdqyi2905/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdqyi2905/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【唐靖远快评】武统台湾？中共恐有心无力</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/04/1904190730462378-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/1904190730462378-600x400.jpg" />
 <h6></h6>
 <hr>
 <p>【大纪元2020年01月15日讯】观众朋友大家好，今天是1月14日星期二，我是唐靖远。</p>
-<p>这几天大家可能都在关注<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md">台湾大选</a>的消息。相信朋友们都已经看了不少关于大选本身的报导和分析，对北京充当了国民党的猪队友这个情况，可能不少朋友觉得费解，难道中南海那帮人看不出自己在帮倒忙吗？为什么明知是坑也要跳进去呢？这背后其实涉及到<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md">中共</a>特色的思维方式和运作机制，我们稍后来和大家探讨。</p>
-<p>今天的主要话题，也和大选有关，就是大选后大陆出现了<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F%E5%8F%B0%E6%B9%BE.md">武统台湾</a>呼声高涨的现象。大家可能都很关心，<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md">中共</a>会不会在不久的未来武统台湾？中共究竟有没有能力武统台湾？美国是否会出兵等等，我们就来聊聊这个话题。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://git.io/JvUGv"><img width="600" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/YYjCH6On1hk" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>这几天大家可能都在关注<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a>的消息。相信朋友们都已经看了不少关于大选本身的报导和分析，对北京充当了国民党的猪队友这个情况，可能不少朋友觉得费解，难道中南海那帮人看不出自己在帮倒忙吗？为什么明知是坑也要跳进去呢？这背后其实涉及到<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>特色的思维方式和运作机制，我们稍后来和大家探讨。</p>
+<p>今天的主要话题，也和大选有关，就是大选后大陆出现了<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F%E5%8F%B0%E6%B9%BE.md#1">武统台湾</a>呼声高涨的现象。大家可能都很关心，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>会不会在不久的未来武统台湾？中共究竟有没有能力武统台湾？美国是否会出兵等等，我们就来聊聊这个话题。</p>
+<p style="text-align: center;"><a src=""></a><a href="https://git.io/JvPbT"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/YYjCH6On1hk" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>中共自称什么情况下发动武统？</h2>
-<p>有关注大选新闻的朋友可能已经注意到，在<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md">台湾大选</a>结束后，大陆网络出现了一个反常现象，就是官媒的表态还算相对低调，反倒是民间网络要求武统的呼声高涨，“留岛不留人”等杀气腾腾的语言比比皆是，而且最奇特的是，出现了自由派人士和统一派人士同时对蔡英文连任总统感到开心高兴的画面。</p>
+<p>有关注大选新闻的朋友可能已经注意到，在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%A4%A7%E9%80%89.md#1">台湾大选</a>结束后，大陆网络出现了一个反常现象，就是官媒的表态还算相对低调，反倒是民间网络要求武统的呼声高涨，“留岛不留人”等杀气腾腾的语言比比皆是，而且最奇特的是，出现了自由派人士和统一派人士同时对蔡英文连任总统感到开心高兴的画面。</p>
 <p>前者对蔡英文成功连任感到高兴很好理解，因为华人世界唯一的民主政权保住了。后者为什么也感到高兴呢？是因为他们觉得蔡英文当选很可能会促成台湾加速独立，这样的话大陆可以名正言顺发动武统，收复台湾就指日可待，不用再遥遥无期地等下去。</p>
 <p>这种心态其实和中共官媒是一致的，也和中共高层的对台心态是一致的。所以，在大陆这种舆论被严密操控，舆论风向被官方严格把握引导的环境中，很多所谓的民意，其实是官方刻意引导推动的结果，民意背后其实往往是党意。从这个角度讲，党媒对蔡英文胜选，表面不爽，其实暗地里并不一定认为是坏事，也就不难理解。</p>
 <p>也就是说，站在党的角度，既然一国两制这块牌子已经搞砸了，和平统一的希望已经非常渺茫，那武统提上议事日程，就成为一种必然。但武统不像统战渗透，可以慢慢来，武统是刚性的质变，需要合理的理由。</p>
@@ -33,7 +33,7 @@
 <p>说到这里，我们就可以回到开头提到的，为什么中共明知文攻武吓肯定会帮蔡英文拉票，还是要一意孤行往坑里跳呢，原因很可能就在这里，就是说，中共事实上已经从和统为主武统为辅，转入武统为主和统为辅的轨道，一切都已经在按既定的方案逐步实施，所以在蔡英文大幅领先的情况下，即便中共采取怀柔手段，依然不太可能借此逆转选情，所以不如索性强硬到底。</p>
 <p>所以，在未来民进党可能连续执政的这十多年时间，将是台海局势发生本质性改变的关键时期。如果我们考虑到习近平今年67岁的年龄，他的实际执政时间再延续20年左右，在他自己定下的第一个一百年启动武统筹划，在第二个一百年之前，完成这个计划，应该算是一个合理的猜测。</p>
 <h2>武统最大障碍是什么？</h2>
-<p>好的，话题聊到这里，我们就需要简单讨论下，中共究竟有没有这样的实力，能够实现<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F%E5%8F%B0%E6%B9%BE.md">武统台湾</a>的目标。</p>
+<p>好的，话题聊到这里，我们就需要简单讨论下，中共究竟有没有这样的实力，能够实现<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F%E5%8F%B0%E6%B9%BE.md#1">武统台湾</a>的目标。</p>
 <p>首先，中共武统台湾的最大障碍是什么？我相信朋友们大都有一个共识，这个障碍不是台湾本身的抵抗，而是美国的介入。</p>
 <p>早在1949年7月，中共挟持占领大陆的余威，发起了金门战役，想要在10月正式宣布建立政权之前，统一台湾，作为一份大礼。但这次战役中共遭遇了空前惨败，第一批登陆的九千多官兵全军覆没，要么被杀，要么被俘，一个都没能脱身。第二年美军第七舰队开进台海，事实上终结了中共占领台湾的梦想，两岸就此保持分治状态到今天。</p>
 <p>这次战役暴露了当时中共的一大软肋，就是陆地人海战术很在行，但登陆作战就是另一回事。而这个软肋到现在，都依然没有得到根本性的改变，中共在登陆作战的设备，兵员训练，实战经验等方面，都无法对台湾军方形成压倒性优势，更不用说面对海军世界第一强的美军。</p>
@@ -58,42 +58,47 @@
 <p>责任编辑：李昊 #</p>
 
 <hr>
-
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/15/n11793980.htm">【唐靖远快评】武统台湾？中共恐有心无力</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11762314.htm">大陆民众如何看台湾总统大选</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753463.htm">台大选辩论 聚焦一国两制、香港、反渗透法</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11752920.htm">蓝绿内斗助中共武统 澳洲华人：台湾应团结</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11731456.htm">【唐靖远快评】中共战狼式大外宣频频触礁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716583.htm">【唐靖远快评】焚书新闻击中人心中什么恐惧？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/13/n11652407.htm">【翻墙必看】香港“中大保卫战”扣人心弦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/13/n11651827.htm">【唐靖远快评】港警暴力突升级 中共三大图谋</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637824.htm">【唐靖远快评】如何解读习近平“全过程民主”</a></li>
-> <li><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786193.md">【热点互动】台湾大选红绿对决 习承诺或落空</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791100.htm">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781408.htm">【独家】专访郑文杰：被虐待致精神崩溃（三）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791857.htm">【翻墙必看】美中签协议 习访缅甸的背后</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760836.htm">他将前世今生的爱 又带到了妻子的来世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772982.htm">【才子佳人】不以貌取人 诸葛亮娶了位发明家</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791109.htm">内幕：美军如何第一时间确认炸死苏莱曼尼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791346.htm">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791008.htm">【新闻看点】川普邀200人见证签署 促习守承诺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791676.htm">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11792363.htm">【十字路口】台大选力抗中共 北京将侵台自救？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788333.htm">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788080.htm">恭喜蔡英文 何韵诗讽林郑为“反共之母”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11786823.htm">乌克兰女星在台湾首次体验投票 只花5分钟</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788570.htm">疑涉港警贪腐题材 郭富城梁朝伟新片未过审</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793980.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/2/n11762314.md#1">大陆民众如何看台湾总统大选</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/29/n11752920.md#1">蓝绿内斗助中共武统 澳洲华人：台湾应团结</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/19/n11731456.md#1">【唐靖远快评】中共战狼式大外宣频频触礁</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/11/n11716583.md#1">【唐靖远快评】焚书新闻击中人心中什么恐惧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/13/n11652407.md#1">【翻墙必看】香港“中大保卫战”扣人心弦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/13/n11651827.md#1">【唐靖远快评】港警暴力突升级 中共三大图谋</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/6/n11637824.md#1">【唐靖远快评】如何解读习近平“全过程民主”</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/15/n11793980.htm">【唐靖远快评】武统台湾？中共恐有心无力</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/15/n11793980.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
